VDR Plugin 'ttxtsubs' Revision History
--------------------------------------

2011-08-21: Version 0.2.3
- Made changes in font settings be applied instantly, without the need to
  change the channel (patch provided by Rolf Ahrenberg)
- Converted *.po to UTF-8
- Updated patch for VDR 1.7.20 (Closes #689)
- Don't log all page info received from VDR (Closes #331)

2010-05-08: Version 0.2.2
- Fixed channel retune triggering in VDR patch and updated patch to 1.7.14
  (Dropped 1.7.12 and 1.7.13 patch)
- Got rid of the backround thread
- Fixed live TV subtitles on FF cards, where there is no transfer mode
- Updated README and TROUBLESHOOTING (Closes #323)
- Increased internal frame buffer and log buffer overflows (Closes #295)

2010-03-06: Version 0.2.1
- Added Estonian translation by Arthur Konovalov (Closes #271)
- Finnish translation updated by Rolf Ahrenberg
- Trigger OSD update when an empty page is sent (making the previous subtitle
  disappear) (Closes #275)
- French translation updated by Michaël Nival (Closes #278)
- Makefile adjustments for VDR 1.7.13.
- Fixed text rendering to not cut off bottom part (Closes #276)
- Italian translation update by Diego Pierotto (Closes #283)
- Added patch for VDR 1.7.13 (Closes #284)

2010-02-27: Version 0.2.0
- Add Ukrainian translation by Yarema aka Knedlyk (Closes #130)
- Some code refactoring
- Major VDR patch update for 1.7.12 (Closes #236, References #139)) - The patch
  now covers the following changes to VDR:
   - Record teletext subtitles
   - Added setup option to enable teletext subtitle recording
   - Allow configuration of fixed teletetxt subtitle pages
   - Capture teletext subtitle pages from PMT
   - Pass teletext date ttxtsubs plugin
  Special Thx to Rolf Ahrenberg!
- Fixed replay when the current live ttxtsubs page differs from the
  one in the recording - Thx to Rolf Ahrenberg (Closes #139)
- Show colored subtitles if color information is provided e.g. for